--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 // Fonts
-$ff-helvetica: 'Helvetica Neue', sans-serif;
+$ff-Opensans: 'Open Sans', sans-serif;
 
 // Palette
 $dark-black: #14171A;
