--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -4,5 +4,5 @@
     max-inline-size: 724px;
     width: 100%;
     margin-inline: auto;
-    font-family: base.$ff-helvetica; 
+    font-family: base.$ff-Opensans; 
 }
