--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,6 +8,7 @@
     }
     &__link i {
       font-size: base.$fs-20;
+      color: base.$orange-main;
     }
     &__copyright {
       margin-block: 10px;
