--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -44,7 +44,7 @@
         margin-top: -65px;
     }
     &__button-shape {
-        background-color: base.$blue-main;
+        background-color: base.$orange-main;
         width: 125px;
         block-size: 35px;
         border-radius: 17px;
@@ -74,7 +74,7 @@
            left: 15px;
         }
         i {
-            color: base.$blue-main;
+            color: base.$orange-main;
             font-size: 24px;
         }
     }
