--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -8,7 +8,7 @@ $dark-black: #14171A;
 $grey-dark: #434f58;
 $grey-light: #5d6e7c;
 $grey-extra-light: #F5F8FA;
-$blue-main: #1DA1F2;
+$orange-main: #FF9100;
 $white-main: #fff;
 
 // REM font-sizes
