--- a/sass/components/_feed.scss
+++ b/sass/components/_feed.scss
@@ -1,3 +1,5 @@
+@use "../base";
+
 .home-main {
   &__card-feed.active {
     display: block;
@@ -6,10 +8,68 @@
     padding-block-start: 15px;
     display: none;
   }
-  &__card-img {
+  &__card {
+    padding: 16px;
+  }
+  &__card:hover {
+    background-color: base.$grey-extra-light;
+  }
+  &__pinned {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    padding-inline-start: 27px;
+    padding-block-end: 10px;
+  }
+  &__pinned-text {
+    color: base.$grey-light;
+    font-size: base.$fs-14;
+  }
+  &__card-content {
+    display: flex;
+  }
+  &__card-avatar {
+    width: 40px;
+    height: 40px;
+  }
+  &__card-content-description {
+    padding: 0 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  &__card-name-date {
+    display: flex;
+    flex-direction: row;
+    font-weight: 700;
+    gap: 10px;
+  }
+  &__card-date {
+    font-weight: 300;
+    font-size: base.$fs-14;
+    color: base.$grey-light;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    .fa-solid {
+      font-size: 4px;
+    }
+  }
+  &__card-tag {
+    background-color: base.$grey-extra-light;
+    margin-block: 10px;
+    padding: 4px 7px;
+    border-radius: 12px;
+    font-weight: 700;
+    max-inline-size: max-content;
+  }
+  &__card-subtitle {
+    color: base.$grey-dark;
+    padding-block-start: 15px;
+  }
+  &__card-img-aqua {
     margin-block-start: 20px;
-    width: 570px;
-    height: 325px;
+    width: 590px;
+    max-height: 325px;
     display: flex;
     flex-direction: row;
     gap: 5px;
@@ -20,7 +80,54 @@
       border-radius: 5px;
     }
     &__side-right img {
-      height: 160px;
+      max-height: 160px;
+    }
+  }
+  &__card-img {
+    margin-block-start: 20px;
+    width: 590px;
+    height: 325px;
+    display: flex;
+    & img {
+      object-fit: cover;
+      object-position: top;
+      box-shadow: 3px 3px 14px 5px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
+    }   
+  }
+  &__card-action {
+    padding-block-start: 35px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    font-size: base.$fs-20;
+    .fa-heart {
+      opacity: 0.3;
+    }
+  }
+}
+
+@media (max-width: 740px) {
+  .home-main {
+    &__card-img {
+      height: 50vw;
+      width: 40vw;
+      & img {
+        width: 74vw;
+      }
+    }
+    &__card-img-aqua{
+      width: 50vw;
+    }
+    &__card-img-aqua {
+      & img {
+        width: 36vw;
+        max-height: 325px;
+      }
+    }
+    &__card-subtitle {
+      inline-size: 75vw;
     }
   }
 }
