--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,7 +8,7 @@
     }
     &__link i {
       font-size: base.$fs-20;
-      color: base.$orange-main;
+      color: base.$purple-main;
     }
     &__copyright {
       margin-block: 10px;
