--- a/sass/components/_feed.scss
+++ b/sass/components/_feed.scss
@@ -100,6 +100,7 @@
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     gap: 20px;
     font-size: base.$fs-20;
     .fa-heart {
