--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,8 +1,7 @@
 @use "../base";
 
 .u-container {
-    max-inline-size: 724px;
-    width: 100%;
-    margin-inline: auto;
+    max-width: 724px;
+    margin: auto;
     font-family: base.$ff-Opensans; 
 }
