--- a/sass/components/_feed.scss
+++ b/sass/components/_feed.scss
@@ -49,6 +49,7 @@
     color: base.$grey-light;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 5px;
     .fa-solid {
       font-size: 4px;
